--- a/compose.yaml
+++ b/compose.yaml
@@ -1,15 +1,35 @@
 services:
-  backend:
-    build: .
-  database:
-    image: postgres-apline
+  db:
+    image: postgres:latest
+    container_name: database
+    environment:
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+      - POSTGRES_USER=${DATABASE_USER}
+      - POSTGRES_DB=${DATABASE_NAME}
     ports:
       - "5432:5432"
-  redis:
-    build: redis
+    volumes:
+      - data:/var/lib/postgresql/
+    networks:
+      - database
+  pgAdmin:
+    image: dpage/pgadmin4
+    container_name: pgAdmin
     ports:
-      - "8080:80"
+      - "8000:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
+    networks:
+      - database
+
+  # redis:
+  #   build: redis
+  #   ports:
+  #     - "8080:80"
 
 volumes:
+  data:
 
 networks:
+  database:
