--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "test": "npm run test",
     "build": "npx tsc",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon --exec tsx src/index.ts",
     "start": "npx tsc && node dist/src/index.js"
   },
   "repository": {
