--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
-    "nodemailer": "^7.0.12",
+    "nodemailer": "^8.0.1",
     "pg": "^8.17.2",
+    "pino": "^10.3.1",
     "pino-http": "^11.0.0",
     "redis": "^5.10.0",
     "zod": "^4.3.5"
@@ -40,11 +42,16 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.10",
+    "@types/nodemailer": "^7.0.11",
     "@types/pg": "^8.16.0",
+    "@types/pino": "^7.0.4",
+    "@types/supertest": "^6.0.3",
     "jest": "^30.2.0",
     "nodemon": "^3.1.11",
+    "pino-pretty": "^13.1.3",
     "supertest": "^7.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
