Added rate limiter base class added ts for ApiResponse & ApiError classes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     "allowJs": true,
 
     "module": "nodenext",
+    "moduleResolution": "nodenext",
     "target": "esnext",
-    "types": [],
+    "types": ["jest"],
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
