--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^8.0.1",
@@ -19,7 +20,7 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "test": "npm run test",
+    "test": "jest",
     "build": "npx tsc",
     "dev": "nodemon --exec tsx src/index.ts",
     "start": "npx tsc && node dist/src/index.js"
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.10",
@@ -53,6 +55,7 @@
     "nodemon": "^3.1.11",
     "pino-pretty": "^13.1.3",
     "supertest": "^7.2.2",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
