--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "pino": "^10.3.1",
     "pino-http": "^11.0.0",
     "redis": "^5.10.0",
-    "zod": "^4.3.5"
+    "zod": "^4.3.5",
+    "zod-validation-error": "^5.0.0"
   },
   "name": "auth_service",
   "version": "1.0.0",
